--- a/mls-backend/mls-api/serverless.yml
+++ b/mls-backend/mls-api/serverless.yml
@@ -76,6 +76,18 @@ functions:
       - httpApi:
           path: /auth/verify-code
           method: post
+  GetDates:
+    handler: functions/GetDates/index.handler
+    events:
+      - httpApi:
+          path: /dates
+          method: get
+  PostUnavailableDates:
+    handler: functions/PostUnavailableDates/index.handler
+    events:
+      - httpApi:
+          path: /dates
+          method: post
 
 
 resources:
@@ -116,4 +128,15 @@ resources:
             KeyType: HASH
           - AttributeName: 'price'
             KeyType: RANGE
+        BillingMode: PAY_PER_REQUEST
+    DateTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: 'mls-date'
+        AttributeDefinitions:
+          - AttributeName: 'id'
+            AttributeType: 'S'
+        KeySchema:
+          - AttributeName: 'id'
+            KeyType: HASH
         BillingMode: PAY_PER_REQUEST
