--- a/mls-frontend/mls-app/package.json
+++ b/mls-frontend/mls-app/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^12.4.2",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.2",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.3",
